deploy: 867004063bcd3009babcecdbc26d50a7de5d0350

--- a/changelog/CHANGELOG.html
+++ b/changelog/CHANGELOG.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <title>1.0.0 (2024-03-02) | SODD Framework | 1.0.0 </title>
+      <title>1.1.0 (2024-04-15) | SODD Framework | 1.1.0 </title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="title" content="1.0.0 (2024-03-02) | SODD Framework | 1.0.0 ">
+      <meta name="title" content="1.1.0 (2024-04-15) | SODD Framework | 1.1.0 ">
       
       
       <link rel="icon" href="../manual/images/favicon.png">
@@ -85,9 +85,14 @@
         </div>
 
         <article data-uid="">
-<h1 id="100-2024-03-02">1.0.0 (2024-03-02)</h1>
+<h1 id="110-2024-04-15"><a href="https://github.com/aruizrab/sodd-unity-framework/compare/v1.0.0...v1.1.0">1.1.0</a> (2024-04-15)</h1>
 
 <h3 id="features">Features</h3>
+<ul>
+<li><strong>collections:</strong> collections now implement IList interface and have a method to get random items (<a href="https://github.com/aruizrab/sodd-unity-framework/commit/48784a198d2cffe1b61d4c15f135a2bda61deae8">48784a1</a>)</li>
+</ul>
+<h1 id="100-2024-03-02">1.0.0 (2024-03-02)</h1>
+<h3 id="features-1">Features</h3>
 <ul>
 <li>add EditorHelper and Framework classes (<a href="https://github.com/aruizrab/sodd-unity-framework/commit/d494a8ca02085b607736ac74e2e405971d413626">d494a8c</a>)</li>
 <li>add icons for events, listeners, variables, collections and action handlers (<a href="https://github.com/aruizrab/sodd-unity-framework/commit/f3a67f5a0a8584c5c64fd5afd1113315b7bef5fe">f3a67f5</a>)</li>
