deploy: 5a902d5422eff007bd15e0d4852219cdb3fd2953

--- a/manual/Installation.html
+++ b/manual/Installation.html
@@ -87,6 +87,10 @@
         <article data-uid="">
 <h1 id="installation">Installation</h1>
 
+<div class="NOTE">
+<h5>Note</h5>
+<p>The SODD Framework requires Unity version 2022.3 or later.</p>
+</div>
 <p>To integrate the <strong>SODD Framework</strong> into your Unity project, follow these steps:</p>
 <ol>
 <li>In your project, open the Package Manager by going to <code>Window</code> &gt; <code>Package Manager</code>.</li>
@@ -101,7 +105,7 @@ the <a href="https://docs.unity3d.com/2021.2/Documentation/Manual/upm-ui-giturl.
 <div class="IMPORTANT">
 <h5>Important</h5>
 <p>The SODD Framework requires
-Unity's <a href="https://docs.unity3d.com/Packages/com.unity.inputsystem@1.8/manual/index.html">Input System</a> package. If it is
+Unity's <a href="https://docs.unity3d.com/Packages/com.unity.inputsystem@latest">Input System</a> package and <a href="https://docs.unity3d.com/Packages/com.unity.textmeshpro@latest">TextMeshPro</a> package. If it is
 not already installed in your project, Unity will prompt you to install it as a dependency when adding the SODD
 Framework.</p>
 </div>
