--- a/manual/Collections.html
+++ b/manual/Collections.html
@@ -125,35 +125,153 @@ detailing the core collection types included in the framework:</p>
 </thead>
 <tbody>
 <tr>
-<td><strong>GameObject Set</strong></td>
+<td><strong>GameObject Collection</strong></td>
 <td>A collection that holds references to GameObjects.</td>
 </tr>
 <tr>
-<td><strong>Transform Set</strong></td>
+<td><strong>Transform Collection</strong></td>
 <td>A collection that holds references to Transforms.</td>
 </tr>
 <tr>
-<td><strong>String Set</strong></td>
+<td><strong>String Collection</strong></td>
 <td>A collection that holds a set of strings.</td>
 </tr>
 <tr>
-<td><strong>Int Set</strong></td>
+<td><strong>Int Collection</strong></td>
 <td>A collection that holds a set of integers.</td>
 </tr>
 <tr>
-<td><strong>Float Set</strong></td>
+<td><strong>Float Collection</strong></td>
 <td>A collection that holds a set of floats.</td>
 </tr>
 <tr>
-<td><strong>Vector2 Set</strong></td>
+<td><strong>Vector2 Collection</strong></td>
 <td>A collection that holds a set of Vector2s.</td>
 </tr>
 <tr>
-<td><strong>Vector3 Set</strong></td>
+<td><strong>Vector3 Collection</strong></td>
 <td>A collection that holds a set of Vector3s.</td>
 </tr>
 </tbody>
 </table>
+<h2 id="practical-example">Practical Example</h2>
+<p>To illustrate the functionality of Scriptable Collections, let's explore a practical use case termed &quot;lock and key.&quot;
+This scenario involves a door that can only be unlocked by the player using a specific key. The level may contain
+multiple doors and keys, but each door requires a distinct key to unlock.</p>
+<h3 id="step-1-creating-the-player-inventory-collection">Step 1: Creating the Player Inventory Collection</h3>
+<p>First, we need to create a GameObject Collection named &quot;Player Inventory&quot; to represent the player's inventory throughout
+the level.</p>
+<ol>
+<li>Right-click in the Project window of Unity.</li>
+<li>Navigate to <code>Create &gt; SODD &gt; Collections &gt; GameObject</code>.</li>
+<li>Name the newly created collection <code>PlayerInventory</code>.</li>
+</ol>
+<p>This collection will now be used to manage the player's inventory items.</p>
+<h3 id="step-2-adding-keys-to-the-inventory">Step 2: Adding Keys to the Inventory</h3>
+<p>Keys are represented by GameObjects equipped with scripts that, upon collision with the player, add themselves to the &quot;
+Player Inventory&quot; collection.</p>
+<p>Here’s the code for the <code>Key</code> script:</p>
+<pre><code class="lang-csharp">using UnityEngine;
+
+public class Key : MonoBehaviour
+{
+    public GameObjectCollection playerInventory;
+
+    private void OnTriggerEnter(Collider other)
+    {
+        if (other.CompareTag(&quot;Player&quot;))
+        {
+            playerInventory.Add(gameObject);
+            gameObject.SetActive(false); // Optionally deactivate the key GameObject
+        }
+    }
+}
+</code></pre>
+<ol>
+<li>Attach the <code>Key</code> script to key GameObjects in the scene.</li>
+<li>Assign the <code>PlayerInventory</code> collection to the <code>playerInventory</code> field in the Key script.</li>
+</ol>
+<h3 id="step-3-unlocking-doors">Step 3: Unlocking Doors</h3>
+<p>Each door is a GameObject with a script that references the inventory and the specific key required for unlocking. When
+the player collides with a door, the script checks if the required key is present in the player's inventory.</p>
+<p>Here’s the code for the <code>Door</code> script:</p>
+<pre><code class="lang-csharp">using UnityEngine;
+using SODD.Collections;
+
+public class Door : MonoBehaviour
+{
+    public Collection&lt;GameObject&gt; playerInventory;
+    public GameObject requiredKey;
+
+    private void OnTriggerEnter(Collider other)
+    {
+        if (other.CompareTag(&quot;Player&quot;) &amp;&amp; playerInventory.Contains(requiredKey))
+        {
+            UnlockDoor();
+        }
+    }
+
+    private void UnlockDoor()
+    {
+        Debug.Log(&quot;Door unlocked&quot;);
+    }
+}
+</code></pre>
+<ol>
+<li>Attach the <code>Door</code> script to door GameObjects in the scene.</li>
+<li>Assign the <code>PlayerInventory</code> collection to the <code>playerInventory</code> field in the Door script.</li>
+<li>Assign the specific key GameObject to the <code>requiredKey</code> field in the Door script.</li>
+</ol>
+<h3 id="step-4-displaying-key-count">Step 4: Displaying Key Count</h3>
+<p>An additional script can be implemented to display the number of keys in the player's inventory on a UI element. This
+script responds to the addition and removal events in the collection by updating a counter accordingly.</p>
+<p>Here’s the code for the KeyCountDisplay script:</p>
+<pre><code class="lang-csharp">using UnityEngine;
+using TMPro;
+using SODD.Collections;
+
+public class KeyCountDisplay : MonoBehaviour
+{
+    public Collection&lt;GameObject&gt; playerInventory;
+    public TMP_Text keyCountText;
+
+    private void OnEnable()
+    {
+        playerInventory.OnItemAdded += UpdateKeyCount;
+        playerInventory.OnItemRemoved += UpdateKeyCount;
+        UpdateKeyCount();
+    }
+
+    private void OnDisable()
+    {
+        playerInventory.OnItemAdded -= UpdateKeyCount;
+        playerInventory.OnItemRemoved -= UpdateKeyCount;
+    }
+
+    private void UpdateKeyCount()
+    {
+        keyCountText.text = playerInventory.Count.ToString();
+    }
+}
+</code></pre>
+<ol>
+<li>Attach the <code>KeyCountDisplay</code> script to a UI GameObject.</li>
+<li>Assign the <code>PlayerInventory</code> collection to the <code>playerInventory</code> field in the <code>KeyCountDisplay</code> script.</li>
+<li>Assign a <code>TMP_Text</code> component to the <code>keyCountText</code> field in the <code>KeyCountDisplay</code> script.</li>
+</ol>
+<h3 id="step-5-testing-the-setup">Step 5: Testing the Setup</h3>
+<p>Now, let's test the setup to ensure everything works as expected.</p>
+<ol>
+<li>Run the game in the Unity Editor.</li>
+<li>When the player collides with a key, the key is added to the inventory, and the key count display updates.</li>
+<li>When the player collides with a door, the script checks for the required key in the inventory and unlocks the door if
+the key is present.</li>
+</ol>
+<h3 id="conclusion">Conclusion</h3>
+<p>This example highlights the benefits of utilizing Scriptable Collections, as it demonstrates how different systems can
+interact with and modify a shared collection in a manner that is both decoupled and efficient. The PlayerInventory
+collection acts as a central repository for keys, allowing the Key, Door, and KeyCountDisplay scripts to interact with
+it independently.</p>
 
 </article>
 
