deploy: 49c5cc29b384c8f04746ad8f88633b9fb337e04c

--- a/manual/Installation.html
+++ b/manual/Installation.html
@@ -91,7 +91,8 @@
 <h5>Note</h5>
 <p>The SODD Framework requires Unity version 2022.3 or later.</p>
 </div>
-<p>To integrate the <strong>SODD Framework</strong> into your Unity project, follow these steps:</p>
+<p>To integrate the <strong>SODD Framework</strong> into your Unity project, follow one of the two methods below:</p>
+<h2 id="installation-via-package-manager">Installation via Package Manager</h2>
 <ol>
 <li>In your project, open the Package Manager by going to <code>Window</code> &gt; <code>Package Manager</code>.</li>
 <li>In the Package Manager, click on the <code>+</code> icon in the top left corner and select '<strong>Add package from git URL</strong>'. For
@@ -105,12 +106,24 @@ the <a href="https://docs.unity3d.com/2021.2/Documentation/Manual/upm-ui-giturl.
 <div class="IMPORTANT">
 <h5>Important</h5>
 <p>The SODD Framework requires
-Unity's <a href="https://docs.unity3d.com/Packages/com.unity.inputsystem@latest">Input System</a> package and <a href="https://docs.unity3d.com/Packages/com.unity.textmeshpro@latest">TextMeshPro</a> package. If it is
+Unity's <a href="https://docs.unity3d.com/Packages/com.unity.inputsystem@latest">Input System</a>
+and <a href="https://docs.unity3d.com/Packages/com.unity.textmeshpro@latest">TextMeshPro</a> packages. If it is
 not already installed in your project, Unity will prompt you to install it as a dependency when adding the SODD
 Framework.</p>
 </div>
-<p>Once the above steps are completed, the latest version of the SODD Framework will appear in your project packages list,
-indicating successful installation.</p>
+<h2 id="manual-installation">Manual Installation</h2>
+<ol>
+<li>Download the source code of the latest release from
+the <a href="https://github.com/aruizrab/sodd-unity-framework/releases">SODD Framework releases page</a>.</li>
+<li>Uncompress the downloaded file into your Unity project's <code>Assets</code> folder.</li>
+</ol>
+<div class="IMPORTANT">
+<h5>Important</h5>
+<p>Before uncompressing the SODD Framework source code, ensure
+that <a href="https://docs.unity3d.com/Packages/com.unity.inputsystem@latest">Input System</a>
+and <a href="https://docs.unity3d.com/Packages/com.unity.textmeshpro@latest">TextMeshPro</a> are installed in your Unity project to
+avoid compilation errors:</p>
+</div>
 
 </article>
 
