--- a/manual/toc.html
+++ b/manual/toc.html
@@ -44,10 +44,19 @@
                               <a href="Events.html" name="" title="Scriptable Events">Scriptable Events</a>
                           </li>
                           <li>
+                              <a href="Listeners.html" name="" title="Scriptable Event Listeners">Scriptable Event Listeners</a>
+                          </li>
+                          <li>
                               <a href="Variables.html" name="" title="Scriptable Variables">Scriptable Variables</a>
                           </li>
                           <li>
+                              <a href="Observers.html" name="" title="Scriptable VariableObservers">Scriptable VariableObservers</a>
+                          </li>
+                          <li>
                               <a href="Collections.html" name="" title="Scriptable Collections">Scriptable Collections</a>
+                          </li>
+                          <li>
+                              <a href="ActionHandlers.html" name="" title="Input Action Handlers">Input Action Handlers</a>
                           </li>
                     </ul>
                 </li>
